adding component spheres

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -1,6 +1,6 @@
 .wrapper{
     background-color: rgb(214 211 209);
-    padding: 90px 0;
+    padding: 5.625rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
