--- a/src/components/reviews/Reviews.module.scss
+++ b/src/components/reviews/Reviews.module.scss
@@ -4,7 +4,7 @@
     no-repeat center center/cover;
   opacity: 0.9;
   width: 100%;
-  padding: 90px 0;
+  padding: 5.625rem 0;
   font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
