--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,3 +1,14 @@
 .wrapper{
-    height: 100vh;
+    background-color: rgba( 166, 147, 116);
+    padding: 70px 0px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    p{
+        color: white;
+        margin-top: 40px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+    }
 }
