--- a/src/components/reviews/Reviews.module.scss
+++ b/src/components/reviews/Reviews.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   background-attachment: local, scroll;
-  background: url("https://admin.netlawman.com/uploads/article/original/types-uk-company.jpg")
+  background: url("https://missiontrans.hu/wp-content/uploads/fuvarszervezes-title-bg-missiontrans-scaled.jpg")
     no-repeat center center/cover;
   opacity: 0.9;
   width: 100%;
