--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,10 +1,21 @@
 .wrapper {
-    background: url("https://images.axios.com/4GhOHiu52e_mUQ_HzzjQhLSL6pk=/0x470:4500x3001/1920x1080/2022/06/27/1656338694626.jpg") no-repeat center center/cover;
-    height: 100vh;
+  height: 60vh;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .title{
+    line-height: 2rem;
+  }
+  button{
+    background-color: rgb(245 158 11);
+  }
+  img{
     width: 100%;
-    font-family: "Roboto", sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    height: 50vh;
+    object-fit: cover;
+    @media screen and (max-width: 500px) {
+        display: none;
+    }
+  }
 }
