--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -1,32 +1,22 @@
-.title{
-    text-align: center;
-    font-size: 26px;
-    font-weight: 700;
-    margin-top: 30px;
-    margin-bottom: 45px;
-}
+
 .Card{
-    width: 420px;
-    height: 370px;
     background-color: rgb(254, 242, 196);
-    display: flex;
-    align-items: center;
     h2{
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 700;
-        margin-top: 30px
+        margin-top: 1.875rem
     }
     p{
-        margin-top: 20px;
+        margin-top: 1.25rem;
         font-weight: 400;
-        font-size: 16px;
-        line-height: 24px;
+        font-size: 1rem;
+        line-height: 1.5rem;
     }
     img{
-        width: 90px;
-        height: 60px; 
+        width: 5.625rem;
+        height: 3.75rem; 
     }
 }
 .item{
-    padding: 35px 35px;
+    padding: 2.1875rem 2.1875rem;
 }
