--- a/src/components/headers/Headers.module.scss
+++ b/src/components/headers/Headers.module.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     .title{
-      line-height: 2rem;
+      line-height: 32px;
     }
     button{
       background-color: rgb(253 230 138);
@@ -14,7 +14,7 @@
       width: 100%;
       height: 50vh;
       object-fit: cover;
-      @media screen and (max-width: 500px) {
+      @media screen and (max-width: 31.25rem) {
           display: none;
       }
     }
