--- a/src/components/lawyers/Lawyers.module.scss
+++ b/src/components/lawyers/Lawyers.module.scss
@@ -10,20 +10,19 @@
 
 .back {
     background-color: rgb(254, 242, 196);
-    backdrop-filter: blur(10px);
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     align-items: center;
     text-align: center;
-
     img {
-        width: 80px;
-        height: 50px;
+        width: 5rem;
+        height: 3.125rem;
     }
 
     h3 {
         color: #fdd137;
-        font-size: 24px;
+        font-size: 1.5rem;
         display: block;
         font-weight: 900;
     }
@@ -31,18 +30,11 @@
     h4 {
         font-weight: 700;
         color: #3b3c44;
-        font-size: 18px;
+        font-size: 1.125rem;
         display: block;
-        margin-bottom: 3px;
+        margin-bottom: 0.1875rem;
     }
     p{
-        margin-top: 60px;
+        margin-top: 3.75rem;
     }
-}
-
-
-
-.cards {
-    display: flex;
-    align-items: center;
 }
