--- a/src/components/lawyers/Lawyers.module.scss
+++ b/src/components/lawyers/Lawyers.module.scss
@@ -1,20 +1,24 @@
 .card {
     margin: 40px;
     text-align: center;
+
 }
 
 .pTitle {
     font-size: 20px;
-    
+
 }
 
 .back {
     background-color: rgb(254, 242, 196);
+    height: 100%;
+    padding: 50px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
     text-align: center;
+
     img {
         width: 5rem;
         height: 3.125rem;
@@ -23,7 +27,6 @@
     h3 {
         color: #fdd137;
         font-size: 1.5rem;
-        display: block;
         font-weight: 900;
     }
 
@@ -34,7 +37,19 @@
         display: block;
         margin-bottom: 0.1875rem;
     }
-    p{
-        margin-top: 3.75rem;
+    .pText{
+        width: 50%;
+
     }
+}
+@media screen and (max-width: 700px) {
+    .back {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
+}
+.cards{
+    display: flex;
 }
