--- a/src/components/aboutUs/AboutUs.module.scss
+++ b/src/components/aboutUs/AboutUs.module.scss
@@ -1,5 +1,5 @@
 .aboutCard {
-    background-color: rgb(234, 233, 233);
+    background-color:rgba(233, 244, 455, );
     border-radius: 10px;
     height: 100%;
     width: 100%;
