--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,15 +1,6 @@
 .wrapper{
-    background-color: rgba( 166, 147, 116);
+    background-color: rgb(254, 242, 196);
     padding: 70px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     inset-block: 10px;
-    p{
-        color: white;
-        margin-top: 40px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 300;
-    }
+
 }
