--- a/src/components/aboutUs/AboutUs.module.scss
+++ b/src/components/aboutUs/AboutUs.module.scss
@@ -1,8 +1,19 @@
 .aboutCard {
-    background-color:rgba(233, 244, 455, );
-    border-radius: 10px;
-    height: 100%;
+  background-color: rgba(233, 244, 455);
+  border-radius: 10px;
+  height: 100%;
+  width: 100%;
+  padding: 60px;
+  display: flex;
+  img {
     width: 100%;
-    padding: 60px;
-    display: flex;
+    height: 50vh;
+    object-fit: cover;
+    @media screen and (max-width: 500px) {
+      display: none;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    padding: 10px;
+  }
 }
