--- a/src/components/headers/Headers.module.scss
+++ b/src/components/headers/Headers.module.scss
@@ -1,9 +1,10 @@
 .wrapper {
-    height: 60vh;
+    // height: 60vh;
     font-family: "Roboto", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 30px 0;
     .title{
       line-height: 32px;
     }
@@ -18,5 +19,8 @@
           display: none;
       }
     }
+    @media screen and (max-width: 31.25rem) {
+      padding: 0;
+  }
   }
   
