--- a/src/components/lawyers/Lawyers.module.scss
+++ b/src/components/lawyers/Lawyers.module.scss
@@ -1,7 +1,7 @@
 .card {
     margin: 40px;
     text-align: center;
-
+    padding: 20px 0;
 }
 
 .pTitle {
@@ -12,7 +12,7 @@
 .back {
     background-color: rgb(254, 242, 196);
     height: 100%;
-    padding: 50px;
+    padding: 50px 0;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
