--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -1,3 +1,11 @@
-.wrapper{
-    padding: 0.25rem 0;
+.wrapper {
+  padding: 0.25rem 0;
+}
+.subNav {
+  padding: 20px;
+  background: rgb(254, 242, 196);
+}
+.supNav {
+  padding: 20px;
+  background: rgb(254, 242, 196);
 }
