--- a/src/components/message/Message.module.scss
+++ b/src/components/message/Message.module.scss
@@ -3,3 +3,16 @@
     padding: 90px 0;
     font-family: "Roboto", sans-serif;
 }
+.content{
+    width: 100%;
+    background-color: white ;
+    .input{
+        background-color: rgb(243, 242, 242);
+        width: 420px;
+        padding: 10px 20px;
+    }
+    .inputs{
+        background-color: rgb(243, 242, 242);
+        padding: 20px
+    }
+}
