--- a/src/components/basic/Basic.module.scss
+++ b/src/components/basic/Basic.module.scss
@@ -6,7 +6,7 @@
   .img {
     width: 6rem;
     height: 6rem;
-    background: rgb(253 230 138);
+    background: linear-gradient(90deg, rgba(246,243,237,1) 0%, rgba(232,231,224,1) 57%, rgba(195,195,192,1) 100%);
     border-radius: 50%;
     display: flex;
     justify-content: center;
