--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,5 +1,6 @@
 .wrapper{
-    background-color: rgb(254, 242, 196);
+    // background-color: rgb(254, 242, 196);
+    background: linear-gradient(90deg, rgba(246,243,237,1) 0%, rgba(232,231,224,1) 57%, rgba(195,195,192,1) 100%);
     padding: 70px 0px;
     inset-block: 10px;
 
