--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -1,10 +1,12 @@
 
 .Card{
-    background-color: rgb(254, 242, 196);
+    // background-color: rgb(254, 242, 196);
+    background: linear-gradient(90deg, rgba(252,239,214,1) 0%, rgba(252,234,166,1) 57%, rgba(251,228,136,1) 100%);
     h2{
         font-size: 1rem;
         font-weight: 700;
         margin-top: 1.875rem
+        
     }
     p{
         margin-top: 1.25rem;
