--- a/src/components/delivery/Delivery.module.scss
+++ b/src/components/delivery/Delivery.module.scss
@@ -1,9 +1,7 @@
 .wrapper {
   font-family: "Roboto", sans-serif;
-  .content {
-    background: url("https://missiontrans.hu/wp-content/uploads/fuvarszervezes-title-bg-missiontrans-scaled.jpg")
-      no-repeat center center/cover;
-      width: 100%;
-      height: 300px;
-  }
+  background: url("https://missiontrans.hu/wp-content/uploads/fuvarszervezes-title-bg-missiontrans-scaled.jpg")
+    no-repeat center center/cover;
+  width: 100%;
+  background-attachment: fixed, scroll;
 }
