--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slick-dots-button li button {
+    background-color: red; /* Цвет точек карусели */
+}
