--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -1,7 +1,12 @@
 
 .Card{
-    // background-color: rgb(254, 242, 196);
-    background: linear-gradient(90deg, rgba(252,239,214,1) 0%, rgba(252,234,166,1) 57%, rgba(251,228,136,1) 100%);
+    // background-color: rgb(195, 195, 195);
+    // background: linear-gradient(90deg, rgba(252,239,214,1) 0%, rgba(252,234,166,1) 57%, rgba(251,228,136,1) 100%);
+    background: linear-gradient(90deg, rgba(246,243,237,1) 0%, rgba(232,231,224,1) 57%, rgba(195,195,192,1) 100%);
+    :hover{
+        background: linear-gradient(90deg, rgba(195,195,192,1) 100% rgba(232,231,224,1) 57%,  rgba(246,243,237,1) 0%,  );
+        transition: 0.9s;
+    }
     h2{
         font-size: 1rem;
         font-weight: 700;
