--- a/src/components/carousel/CarouselHead.module.scss
+++ b/src/components/carousel/CarouselHead.module.scss
@@ -27,8 +27,35 @@
     }
   }
 
-  
-  .ant-carousel-dots li.ant-carousel-dot-active button {
-    background-color: green; /* Цвет активной точки карусели */
+  .carouselContainer {
+    position: relative;
+    max-width: 100%;
   }
+  
+  .prevBtn, .nextBtn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: black;
+    border: none;
+    padding: 15px;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 10;
+    font-size: 24px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .prevBtn {
+    left: -90px;  /* Двигаем кнопку левее карусели */
+  }
+  
+  .nextBtn {
+    right: -90px; /* Двигаем кнопку правее карусели */
+  }
+  
+  .prevBtn:hover, .nextBtn:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
   
