--- a/src/components/Requests/Requests.module.scss
+++ b/src/components/Requests/Requests.module.scss
@@ -30,3 +30,27 @@
     }
 
 }
+.form-container {
+    background: #f9f9f9;
+    padding: 40px;
+    border-radius: 10px;
+  }
+  
+  .file-upload-label {
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 10px;
+    display: block;
+  }
+  
+  input[type="file"] {
+    display: block;
+    margin-top: 10px;
+  }
+  
+  button[type="submit"] {
+    background-color: #ffcc00;
+    color: #fff;
+    font-size: 16px;
+  }
+  
