--- a/src/components/headers/Headers.module.scss
+++ b/src/components/headers/Headers.module.scss
@@ -17,6 +17,11 @@
     }
     @media screen and (max-width: 31.25rem) {
       padding: 0;
+      .title{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
   }
   }
   
