--- a/src/components/advantage/Advantage.module.scss
+++ b/src/components/advantage/Advantage.module.scss
@@ -2,3 +2,17 @@
     display:flex;
     justify-content: space-between;
 }
+.title{
+    font-weight: 700;
+    text-align: center;
+    font-size: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+@media (max-width: 768px) {
+    .title{
+        font-size: 30px;
+        width: 100%;
+        padding: 0px 70px;
+    }
+}
