--- a/src/components/lawyers/Lawyers.module.scss
+++ b/src/components/lawyers/Lawyers.module.scss
@@ -40,16 +40,42 @@
     }
 
 }
-@media screen and (max-width: 700px) {
-    .back {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-    }
-    h1{
-        width: 100%;
+
+@media (max-width: 768px) {
+
+    .card {
+      h1 {
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+
+      .pTitle {
+        font-size: 0.9rem;
+      }
     }
 
+    .back {
+      flex-direction: column;
+      align-items: center;
+      padding: 20px 0;
+      gap: 2rem;
+
+      .cards {
+        flex: 1 1 auto;
+        text-align: center;
+
+        h4,
+        h3 {
+          font-size: 0.85rem;
+        }
+      }
+
+      .pText {
+        p {
+          font-size: 0.9rem;
+        }
+      }
+    }
 }
 .cards{
     display: flex;
